*Navigation drawer update
Navigation drawer related change.
Nav header background, icon image changed. It looks much better now.

And nav drawer items  were not tracking where we at. also when we click Scan and come back, it was still showing that scan is selected even we are not at home fragment.
Didn't work at all except starting scan activity.

Now it works well.
It tracks what fragment or what activity(scanactivity) we are, also when we move to another fragment, selected item will change too.

(+ didn't remove tutorial item  from the drawer yet. We don't use it right now but just in case)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
     <color name="AccentColor">#FC3A3E</color>
     <color name="FontColor">#323048</color>
     <color name="Transparent">#00000000</color>
+    <color name="MyoSplashColor">#2A293B</color>
+    <color name="MyoSplashColorV2">#434358</color>
+    <color name="MyoSplashColorV3">#3D3C4C</color>
+    <color name="Blue">#3949ab</color>
+
+
+
+
 </resources>
