--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,7 +18,7 @@
             android:icon="@drawable/ic_helpcircle"
             android:title="Tutorial" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_settigns"
             android:icon="@drawable/ic_menu_manage"
             android:title="Settings" />
     </group>
