--- a/app/src/main/res/layout/music_activity_main.xml
+++ b/app/src/main/res/layout/music_activity_main.xml
@@ -156,7 +156,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"/>
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_music"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_fileName="scaling_loader.json"
+        android:gravity="center"
+        android:layout_marginTop="170dp"/>
     <com.simplemobiletools.commons.views.MyRecyclerView
         android:id="@+id/songs_list"
         android:layout_width="match_parent"
