2: Auto stash before revert of "Revert "Merge remote-tracking branch 'origin/master' into Adapter2""

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -31,4 +31,12 @@
 
             />
     </ScrollView>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_gallery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:lottie_fileName="material_wave_loading.json"
+        android:gravity="center"
+        android:layout_marginTop="550dp"/>
 </RelativeLayout>
+
