--- a/app/src/main/res/layout/music_activity_main.xml
+++ b/app/src/main/res/layout/music_activity_main.xml
@@ -156,13 +156,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"/>
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_music"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:lottie_fileName="scaling_loader.json"
-        android:gravity="center"
-        android:layout_marginTop="170dp"/>
+
     <com.simplemobiletools.commons.views.MyRecyclerView
         android:id="@+id/songs_list"
         android:layout_width="match_parent"
@@ -220,7 +214,13 @@
         android:padding="@dimen/activity_margin"
         android:text="@string/add_folder_to_playlist"
         android:textSize="@dimen/bigger_text_size"/>
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_music"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:lottie_fileName="material_wave_loading.json"
+        android:gravity="center"
+        android:layout_marginTop="500dp"/>
 
 
 </RelativeLayout>
