Revert "Merge branch 'Adapter2'"
This reverts commit ab02f334285cb4b52a48219e7b2b254282b0e626.

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -46,7 +46,12 @@ android:layout_height="match_parent"
         <!--app:layout_anchor="@+id/camera"-->
         <!--app:layout_anchorGravity="right|top" />-->
 
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:lottie_fileName="scaling_loader.json"
+        android:layout_marginTop="300dp"/>
 
 
     <LinearLayout
@@ -236,12 +241,7 @@ android:layout_height="match_parent"
         </LinearLayout>
 
     </LinearLayout>
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_camera"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:lottie_fileName="material_wave_loading.json"
-        android:layout_marginTop="500dp"/>
+
 <!-- Edit -->
 <android.support.v4.widget.NestedScrollView
     android:id="@+id/controls"
