--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -229,7 +229,13 @@
         </LinearLayout>
     </LinearLayout>
 
-
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_system"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_fileName="scaling_loader.json"
+            android:gravity="center"
+            android:layout_marginTop="370dp"/>
     <TextView
         android:id="@+id/gestureTextView"
         android:layout_width="wrap_content"
@@ -242,11 +248,5 @@
         android:text="Connect Myo "
         android:layout_alignParentBottom="true"
         android:textStyle="bold" />
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_system"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:lottie_fileName="material_wave_loading.json"
-        android:gravity="center"
-        android:layout_marginTop="550dp"/>
+
 </RelativeLayout>
