Revert "Merge branch 'Toasty2' into origin/master"
This reverts commit e7bd342bb9c8f5964ce510d09c6734ca75a4fece.

--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -243,19 +243,10 @@
         android:layout_alignParentBottom="true"
         android:textStyle="bold" />
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_system_lock"
+        android:id="@+id/lottie_system"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:lottie_fileName="lock.json"
-        android:layout_marginTop="650dp"/>
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_system_unlock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
         app:lottie_fileName="material_wave_loading.json"
+        android:gravity="center"
         android:layout_marginTop="550dp"/>
-
-
 </RelativeLayout>
