--- a/app/src/main/res/layout/fragment_tab_fragment1.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment1.xml
@@ -82,18 +82,10 @@
     <!--android:layout_height="match_parent"-->
     <!--android:text="@string/hello_blank_fragment" />-->
 <com.airbnb.lottie.LottieAnimationView
-android:id="@+id/lottie_lock"
+android:id="@+id/lottie"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_gravity="center"
-app:lottie_fileName="lock.json"
+app:lottie_fileName="material_wave_loading.json"
 android:layout_marginTop="270dp"/>
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_unlock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:lottie_fileName="material_wave_loading.json"
-        android:layout_marginTop="270dp"/>
-
 </FrameLayout>
