2: Auto stash before merge of "Toasty2" and "origin/master"
gesture save, animation

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -236,21 +236,29 @@ android:layout_height="match_parent"
         </LinearLayout>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_camera_lock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom"
         app:lottie_fileName="lock.json"
-        android:layout_marginTop="500dp"/>
+        android:layout_marginBottom="150dp"/>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_camera_unlock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom"
         app:lottie_fileName="material_wave_loading.json"
-        android:layout_marginTop="500dp"/>
-
+        android:layout_marginBottom="50dp"
+        />
+    </LinearLayout>
 <!-- Edit -->
 <android.support.v4.widget.NestedScrollView
     android:id="@+id/controls"
