--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -31,12 +31,27 @@
 
             />
     </ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_gallery"
+        android:id="@+id/lottie_gallery_lock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:lottie_fileName="lock.json"
+        android:layout_marginBottom="120dp"/>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_gallery_unlock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         app:lottie_fileName="material_wave_loading.json"
-        android:gravity="center"
-        android:layout_marginTop="550dp"/>
+        android:layout_marginBottom="20dp"/>
+    </LinearLayout>
 </RelativeLayout>
 
