--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -20,13 +20,25 @@
         app:layout_constraintVertical_bias="0.0" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_gallery_picture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:lottie_fileName="material_wave_loading.json"
-        android:gravity="center"
-        android:layout_marginTop="550dp"/></LinearLayout>
+        android:layout_height="match_parent">
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_gallery_picture_lock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:lottie_fileName="lock.json"
+            android:layout_marginBottom="120dp"/>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_gallery_picture_unlock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:lottie_fileName="material_wave_loading.json"
+            android:layout_marginBottom="20dp"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
